{{cookiecutter.github_repo_name}}/terraform/stacks/modules/kubernetes_kubeapps/yml/ingress-kubeapps.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeapps
  namespace: kubeapps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - "kubeapps.k8s.lawrencemcdaniel.com"
    secretName: wild-hosting-live-tls
  rules:
  - host: kubeapps.k8s.lawrencemcdaniel.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubeapps
            port:
              number: 80
